<resources>
    <string name="app_name">Locus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">{name}</string>
    <string name="user_email">{email}</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Places ...</string>
    <string name="categories">Categories</string>
    <string name="enter_radius">Enter Radius: </string>
    <string name="not_point">Notification Point</string>
    <string name="name_title">Enter Task</string>
    <string name="start">Entry</string>
    <string name="end">Exit</string>
    <string name="enter_location">Enter Location</string>
    <string name="task_desc">Task Description</string>
    <string name="name_desc">Enter Description</string>
    <string name="categories_text">Categories</string>
    <string name="places_around_you">Places Around You</string>
    <string name="tasktitle">Task Title</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="activity_home_name">Home</string>
    <string name="activity_reminders_name">Reminders</string>
    <string name="activity_saved_places_name">Saved Places</string>
    <string name="radius_in_m">%s m</string>
    <string name="radius_in_m_settings">%s m</string>
    <string name="task_title_tv_ni_text">Task Title</string>
    <string name="enter_task_title_here">Enter task title here ...</string>
    <string name="task_desc_tv_ni">Description</string>
    <string name="enter_task_description_here">Enter task description here ...</string>
    <string name="choose_location_tv_ni">Choose Location</string>
    <string name="radius_text">Radius</string>
    <string name="address_text_tv_ni">Address</string>
    <string name="title_error">Title cannot be empty.</string>
    <string name="description_error">Description cannot be empty.</string>
    <string name="task_desc_title">Description: </string>
    <string name="address_text_title">Address:</string>
    <string name="delete_menu_text">Delete</string>
    <string name="MAPS_API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyCO-xmGTB6Vn-BUNjqBH20CbH6QWRRx-VI</string>
    <string name="title_activity_settings">Settings</string>
    <string name="whatL">What is Locus?</string>
    <string name="howto">How to:</string>
    <string name="viewC">View Categorised Places</string>
    <string name="viewS">View Saved Places</string>
    <string name="navigatePlaceNow">Navigate to a place</string>
    <string name="reminderHelp">View/Add/Delete Location-based Reminders</string>
    <string name="save_a_place">Save a Place Detail</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="noReminderHint">No reminder found. \nCreate a new reminder by \npressing plus button.</string>

    <!-- Manuals -->
    <string name="whatLo">Locus is a location-based application which allows a user to know his/her surroundings better by providing them recommended places (Best-Rated by visitors) as well as categorised view of different locations such as ATMs, Banks, Taxi Stations, Police Stations, Restraunts etc. It allows a user to make best use of MAPS without having to mess with cumbersome UI of Google Maps which users often struggle to use.
Along with this, this application also allows you to create location-based reminders. For instance, If a person wants to buy eggs, he/she can set up a reminder and will get a notification whenever he/she enters in defined radius for any supermarket. The procedure is available under Help and Feedback.
This application also allows a user to save particular places for quick access. For instance, if a user visits Best Price more often, he/she can use saved places for quick access for place details and navigation. The tutorial for "Saving a Place" and accessing it is provided in Help and Feedback.
At last, we will also like to tell you that this application uses minimal local storage of your device as the data is synced and saved on our server eliminating need of your phone storage to keep this application and your phone run efficiently. The synchronization of data will also be done between number of devices logged in with same Google ID.
        Thank you for choosing "LOCUS" and giving us a chance to make your life simple.
</string>
    <string name="category_step1">1. Categories are available on home activity. To open categorised data for places, click on one of following</string>
    <string name="category_step2">2. After clicking on particular category, a list will be displayed on screen. For instance, following list for ATMs</string>
    <string name="category_step3">3. Now, click on any place you would like to. It will show you each and every detail about that place</string>
    <string name="saved_step1">1. Open Navigation Drawer</string>
    <string name="saved_step2">2. Select Saved Places from drawer menu. </string>
    <string name="saved_step3">3. It will open the saved places interface providing you with all the places that have been saved for a particular user.</string>
    <string name="nav_step">1. Open any place detail and click on <b>VIEW ON MAP</b> option to directly navigate to place.</string>
    <string name="save_step1">1. Open any place detail and click on save button located on top right corner.</string>
    <string name="viewr_step">1.1 Open Navigation Drawer.</string>
    <string name="viewr_step1">1.2 Click on Reminders.</string>
    <string name="viewr_step2">1.3 It will show all the reminders that have been added by users.</string>
    <string name="viewr"><b><u> 1. View Reminders</u></b></string>
    <string name="addr"><b><u> 2. Add Reminders</u></b></string>
    <string name="deleter"><b><u> 3. Delete Reminders</u></b></string>
    <string name="addr_step1">2.1 Click on plus button located on bottom right.</string>
    <string name="addr_step2">2.2 Enter Task Title and Description.</string>
    <string name="addr_step3">2.3 Select location using following option located on mid-right of screen.</string>
    <string name="addr_step4">2.4 Set the radius for notification.</string>
    <string name="addr_step5">2.5 Select tick button to save the reminder.</string>
    <string name="delr_step1">3.1 Click on options located on right of reminder entry.</string>
    <string name="delr_step2">3.2 Click on delete option.</string>
</resources>
