<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context="xyz.gautamhans.locus.ui.Reminder_UI_Activity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tasktitle"
            android:textSize="15dp"
            />
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_title"
            android:textSize="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_desc"
            android:textSize="15dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_desc"
            android:textSize="20dp"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_height="25dp"
            android:src="@drawable/placeholder"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/placeholder1"
            android:id="@+id/imageView2"
            android:onClick="hide"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_location"
            android:layout_toRightOf="@id/imageView1"
            android:paddingLeft="20dp"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:layout_toLeftOf="@id/imageView2"
            android:textSize="20dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/locationSelected"
            android:layout_gravity="center"
            android:text="demo"
            android:textStyle="italic"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_height="25dp"
            android:src="@drawable/radius"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_radius"
            android:layout_toRightOf="@id/imageView3"
            android:paddingLeft="20dp"
            android:id="@+id/textView3"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView3"
            android:layout_marginLeft="10dp"
            android:text="1"
            android:textSize="20dp"
            android:inputType="number"
            android:id="@+id/textview4"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView4"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ring"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:text="@string/not_point"
            android:layout_toRightOf="@id/imageView4"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/start"
            android:id="@+id/cb1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cb1"
            android:layout_marginLeft="10dp"
            android:text="@string/end"
            android:id="@+id/cb2"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/stopwatch"
            android:id="@+id/imageView5"/>

        <TextView
            android:layout_toRightOf="@id/imageView5"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Everytime"
            android:id="@+id/textview6"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_height="fill_parent"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/checked"
            android:id="@+id/imageView6"
            android:onClick="saveButtonPressed"
            />
    </RelativeLayout>
</LinearLayout>
